--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -442,7 +442,7 @@ tbody>tr>td:last-child {
 .container-tabbed #queue-tab,
 .container-tabbed #queue-tab,
 .container-tabbed #queue-messages,
-.container-tabbed .history h2,
+.container-tabbed .history-header h2,
 .container-tabbed .queue h2,
 .history-queue-swicher {
     display: none;
@@ -990,13 +990,24 @@ tr.queue-item>td:first-child>a {
     position: relative;
 }
 
-.history h2 {
+.history-header {
     clear: left;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.history h2 + a {
+.history-header a {
+    align-self: center;
     margin-right: 2px;
     font-size: 12px;
+}
+
+.container-tabbed .history-header {
+    display: inline;
+}
+
+.container-tabbed .history-header a {
     position: absolute;
     right: 0;
     top: 10px;
