--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -34,7 +34,7 @@
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/bootstrap/css/bootstrap.min.css?v=$version" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/chartist.min.css" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?v=$version" />
-    <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.night.css?v=$version" media="(prefers-color-scheme: dark)"/>
+    <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/night.css?v=$version" media="(prefers-color-scheme: dark)"/>
 
     <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico?v=$version" />
 
