--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -15,7 +15,9 @@
 
     <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?v=$version" />
     <link rel="stylesheet" type="text/css" href="../staticcfg/css/login.css?v=$version" />
+    <!--#if $color_scheme not in ('Light', '') #-->
     <link rel="stylesheet" type="text/css" href="../staticcfg/css/night.css?v=$version" media="(prefers-color-scheme: dark)"/>
+    <!--#end if#-->
 
     <script type="text/javascript" src="../staticcfg/js/jquery-3.5.1.min.js?v=$version"></script>
     <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js?v=$version"></script>
