Fix check-all checkbox state

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -135,7 +135,7 @@
 
         <div data-bind="visible: history.isMultiEditing()">
             <span class="label label-default" data-bind="text: history.multiEditItems().length">0</span>
-            <label for="multiedit-checkall">
+            <label for="multiedit-checkall" data-section="history">
                 <input type="checkbox" name="multieditCheckAll" id="multiedit-checkall" title="$T('Glitter-checkAll')" data-bind="click: checkAllJobs" data-tooltip="true" data-placement="top" />
             </label>
         </div>
