--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -171,7 +171,7 @@
 
     <form class="multioperations-selector" data-bind="visible: (hasQueue() && queue.isMultiEditing())" style="display: none;">
         <div class="add-nzb-inputbox add-nzb-inputbox-small add-nzb-inputbox-options">
-            <label for="multiedit-checkall">
+            <label for="multiedit-checkall" data-section="queue">
                 <input type="checkbox" name="multieditCheckAll" id="multiedit-checkall" title="$T('Glitter-checkAll')" data-bind="click: checkAllJobs" data-tooltip="true" data-placement="top" />
             </label>
             <a href="#" class="hover-button" data-bind="click: doMultiDelete">
