Fix check-all checkbox state (#2639)
* Fix check-all checkbox state

* Refactor check-all fix

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -135,8 +135,8 @@
 
         <div data-bind="visible: history.isMultiEditing()">
             <span class="label label-default" data-bind="text: history.multiEditItems().length">0</span>
-            <label for="multiedit-checkall">
-                <input type="checkbox" name="multieditCheckAll" id="multiedit-checkall" title="$T('Glitter-checkAll')" data-bind="click: checkAllJobs" data-tooltip="true" data-placement="top" />
+            <label for="multiedit-checkall-history">
+                <input type="checkbox" name="multieditCheckAll" id="multiedit-checkall-history" title="$T('Glitter-checkAll')" data-bind="click: checkAllJobs" data-tooltip="true" data-placement="top" />
             </label>
         </div>
 
