--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -124,7 +124,7 @@
 
 <div class="colmask">
     <div class="padding alt">
-        <h5 class="copyright">Copyright &copy; 2007-2023 The SABnzbd Team (<a href="https://sabnzbd.org/" target="_blank">sabnzbd.org</a>)</h5>
+        <h5 class="copyright">Copyright &copy; 2007-2023 The SABnzbd-Team (<a href="https://sabnzbd.org/" target="_blank">sabnzbd.org</a>)</h5>
         <p class="copyright"><small>$T('yourRights')</small></p>
     </div>
 
