Add dark mode for wizard, config, and login (#2621)
* feat: add dark mode for wizard, config, and login

* combine the dark skins

* make the buttons the same as in Glitter

* load the night theme based on config setting

* Changes to darkmode

---------

Co-authored-by: Safihre <safihre@sabnzbd.org>

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -34,6 +34,9 @@
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/bootstrap/css/bootstrap.min.css?v=$version" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/chartist.min.css" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?v=$version" />
+    <!--#if $color_scheme not in ('Light', '') #-->
+    <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/night.css?v=$version" media="(prefers-color-scheme: dark)"/>
+    <!--#end if#-->
 
     <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico?v=$version" />
 
