--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -123,7 +123,7 @@
 </div>
 
 <div class="colmask">
-    <div class="padding alt">
+    <div class="padding">
         <h5 class="copyright">Copyright &copy; 2007-2023 The SABnzbd-Team (<a href="https://sabnzbd.org/" target="_blank">sabnzbd.org</a>)</h5>
         <p class="copyright"><small>$T('yourRights')</small></p>
     </div>
