Cancel purge log should stay on current page

--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -142,6 +142,8 @@
                     url: "../../api",
                     data: {mode: 'config', name: 'purge_log_files', output: 'json', apikey: \$('#apikey').val()}
                 })
+            } else {
+                return false;
             }
         })
     })
