--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -89,7 +89,7 @@ body {
     display: block;
     position: static;
     float: right;
-    color: black !important;
+    color: black;
     padding: 0px;
     font-size: 1.2em;
 }
