--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -15,6 +15,11 @@
     var hostnames = ""
 </script>
 
+<div class="server-frame">
+    <a href="#">&times;</a>
+    <iframe></iframe>
+</div>
+
 <div class="colmask">
     <div class="padding alt section">
         <button type="button" class="btn btn-default" id="addServerButton"><span class="glyphicon glyphicon-plus"></span> $T('button-addServer')</button>
@@ -33,8 +38,6 @@
     <div class="section" id="addServerContent" style="display: none;">
         <div class="col2">
             <h3>$T('addServer') <a href="$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
-
-            <iframe></iframe>
         </div>
         <div class="col1">
             <form action="addServer" method="post" autocomplete="off" onsubmit="removeObfuscation();">
@@ -306,7 +309,9 @@
                             serverBandwithData[${cur}] = <!--#echo json.dumps($server['amounts'][4])#-->
                             serverArticleTries[${cur}] = <!--#echo json.dumps($server['amounts'][5])#-->
                             serverArticleFailed[${cur}] = <!--#echo json.dumps($server['amounts'][6])#-->
+                            <!--#if int($server['enable']) != 0#-->
                             hostnames += ",$server['host']"
+                            <!--#end if#-->
                         </script>
                     <!--#end if#-->
                 </div>
@@ -513,9 +518,6 @@
             \$('#addServerContent').show();
             // Add coloring
             addRowColor()
-            // Show text-ad
-            // NOTE: The hash-part cannot be seen by the server, so we don't know which hostnames you use!
-            \$(".Servers iframe").attr("src", "https://sabnzbd.org/servers#$active_lang" + hostnames)
         });
 
         \$('[name="ssl"]').click(function() {
@@ -604,6 +606,34 @@
                 setTimeout(function() { location.reload(); }, 100)
             });
         });
+
+        // Show text-ad if there is space
+        if((\$("body").width() - \$("#content").width())/2 > (\$('.Servers .server-frame iframe').width() + 40)) {
+            // Do not show if dismissed previously
+            if(localStorage.getItem("server-frame-hide") === null) {
+                // Let the page on the server tell us if we need to show
+                function receiveMessage(event) {
+                    // Check origin of message for security reasons
+                    if(event.origin === 'https://sabnzbd.org') {
+                        if(event.data == 'show_server') {
+                            \$('.Servers .server-frame').show()
+                            \$('.Servers .server-frame a').click(function () {
+                                localStorage.setItem("server-frame-hide", "hide")
+                                \$('.Servers .server-frame').hide()
+                            })
+                        }
+                        if(event.data == 'hide_server') {
+                            // Don't load anymore
+                            localStorage.setItem("server-frame-hide", "hide")
+                        }
+                    }
+                }
+                window.addEventListener("message", receiveMessage, false);
+
+                // NOTE: The hash-part cannot be seen by the server, so we don't know which hostnames you use!
+                \$('.Servers .server-frame iframe').attr("src", "https://sabnzbd.org/servers#$active_lang" + hostnames)
+            }
+        }
     });
 </script>
 
