--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -1051,9 +1051,29 @@ input[type="checkbox"] {
     margin: 10px 0px;
 }
 
-.Servers iframe {
-    width: 100%;
+.Servers .server-frame {
+    position: relative;
+    width: 220px;
     height: 325px;
+    margin-bottom: -325px;
+    left: -240px;
+    display: none;
+}
+
+.Servers .server-frame a {
+    color: black !important;
+    text-decoration: none !important;
+    opacity: 0.8;
+    font-size: 2em;
+    font-family: arial, sans-serif !important;
+    position: absolute;
+    right: 5px;
+    top: -5px;
+}
+
+.Servers .server-frame iframe {
+    width: 100%;
+    height: 100%;
     border: 0;
 }
 
