--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -35,7 +35,7 @@
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/chartist.min.css" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?v=$version" />
     <!--#if $color_scheme not in ('Light', '') #-->
-    <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/night.css?v=$version" media="(prefers-color-scheme: dark)"/>
+    <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/${color_scheme}.css?v=$version"/>
     <!--#end if#-->
 
     <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico?v=$version" />
