--- a/interfaces/wizard/inc_top.tmpl
+++ b/interfaces/wizard/inc_top.tmpl
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?v=$version"/>
         <link rel="stylesheet" type="text/css" href="static/style.css?v=$version"/>
         <!--#if $color_scheme not in ('Light', '') #-->
-        <link rel="stylesheet" type="text/css" href="../staticcfg/css/night.css?v=$version" media="(prefers-color-scheme: dark)"/>
+        <link rel="stylesheet" type="text/css" href="../staticcfg/css/${color_scheme}.css?v=$version"/>
         <!--#end if#-->
         <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=$version" />
         <script type="text/javascript" src="../staticcfg/js/jquery-3.5.1.min.js?v=$version"></script>
